apps/wg-easy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg-easy
spec:
  selector:
    matchLabels:
      app: wg-easy
  template:
    metadata:
      labels:
        app: wg-easy
    spec:
      priorityClassName: system-cluster-critical
      tolerations:
        - operator: Exists
      containers:
        - name: wg-easy
          image: ghcr.io/wg-easy/wg-easy
          ports:
            - name: web
              containerPort: 80
              protocol: TCP
            - name: wireguard
              containerPort: 51820
              protocol: UDP
          securityContext:
            capabilities:
              add:
                - SYS_MODULE
                - NET_ADMIN
            sysctls:
              - name: net.ipv4.ip_forward
                value: "1"
              - name: net.ipv4.conf.all.forwarding
                value: "1"
              - name: net.ipv4.conf.all.src_valid_mark
                value: "1"
          resources:
            requests:
              cpu: 10m
              memory: 100M
            limits:
              memory: 100M
          volumeMounts:
            - name: data
              mountPath: /etc/wireguard
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wg-easy-data
