apps/wg-easy/ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wg-easy
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vpn.cluster.starsystem.dev`)
      kind: Rule
      services:
        - name: wg-easy
          port: 80
